--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não  é Marcos Evangelista
+                <p class="not-account">Não  é Marcos Evangelista.
                
 
                 </p>
